--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "win": {
       "icon": "build/icon.ico"
     },
+    "linux": {
+      "target": ["AppImage"],
+      "icon": "build/icon.ico"
+    },
     "copyright": "Copyright © 2020 Ismaeel Akram",
     "files": [
       "build/icon.ico",
